--- a/detectorGases/pom.xml
+++ b/detectorGases/pom.xml
@@ -35,5 +35,10 @@
 		<version>4.1.63.Final</version>
 		<classifier>osx-x86_64</classifier>
 	</dependency>
+	<dependency>
+    	<groupId>io.vertx</groupId>
+    	<artifactId>vertx-mqtt</artifactId>
+    	<version>4.0.3</version>
+	</dependency>
   </dependencies>
 </project>
