--- a/esepetreintaydos/platformio.ini
+++ b/esepetreintaydos/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	robbie-remote/RESTClient@^1.0.0
 	arduino-libraries/NTPClient@^3.2.1
+	abcdaaaaaaaaa/MQSpaceData@^3.1.0
