--- a/esepetreintaydos/platformio.ini
+++ b/esepetreintaydos/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
 	robbie-remote/RESTClient@^1.0.0
 	arduino-libraries/NTPClient@^3.2.1
 	abcdaaaaaaaaa/MQSpaceData@^3.1.0
+	adafruit/Adafruit SSD1306@^2.5.14
+	adafruit/Adafruit GFX Library@^1.12.1
