--- a/esepetreintaydos/platformio.ini
+++ b/esepetreintaydos/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:nodemcu-32s]
 platform = espressif32
-board = nodemcu-32s
+board = node32s
 framework = arduino
+monitor_speed = 9600
 lib_deps = 
 	mikalhart/TinyGPSPlus@^1.0.2
 	bblanchon/ArduinoJson@^6.17.3
@@ -21,3 +22,4 @@ lib_deps =
 	abcdaaaaaaaaa/MQSpaceData@^3.1.0
 	adafruit/Adafruit SSD1306@^2.5.14
 	adafruit/Adafruit GFX Library@^1.12.1
+	arduino-libraries/Ethernet@^2.0.2
