--- a/esepetreintaydos/platformio.ini
+++ b/esepetreintaydos/platformio.ini
@@ -23,3 +23,5 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.14
 	adafruit/Adafruit GFX Library@^1.12.1
 	arduino-libraries/Ethernet@^2.0.2
+	miguel5612/MQUnifiedsensor@^3.0.0
+	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
