--- a/esepetreintaydos/platformio.ini
+++ b/esepetreintaydos/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[env:node32s]
 platform = espressif32
 board = node32s
 framework = arduino
