--- a/detectorGases/pom.xml
+++ b/detectorGases/pom.xml
@@ -15,6 +15,31 @@
 		<version>4.0.3</version>
 	</dependency>
 	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.15.3</version> 
+	</dependency>
+	<dependency>
+	  <groupId>io.vertx</groupId>
+	  <artifactId>vertx-config</artifactId>
+	  <version>4.0.3</version>
+	</dependency>
+	<dependency>
+  	  <groupId>io.vertx</groupId>
+  	  <artifactId>vertx-config-yaml</artifactId>
+  	  <version>4.0.3</version>
+	</dependency>
+	<dependency>
+	   <groupId>com.fasterxml.jackson.core</groupId>
+	   <artifactId>jackson-annotations</artifactId>
+	   <version>2.15.3</version>
+	</dependency>
+	<dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-core</artifactId>
+	  <version>2.15.3</version>
+	</dependency>
+	<dependency>
 		<groupId>io.vertx</groupId>
 		<artifactId>vertx-web</artifactId>
 		<version>4.0.3</version>
